--- a/Kaggle/House Prices/python/Exploration.ipynb
+++ b/Kaggle/House Prices/python/Exploration.ipynb
@@ -24,243 +24,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df_house = pd.read_csv('../data/train.csv', index_col=0)"
+    "df_house = pd.read_csv('../data/train.csv', index_col=0)\n",
+    "df_house_test = pd.read_csv('../data/test.csv', index_col=0)\n",
+    "df_all = pd.concat((df_house.iloc[:, :-1], df_house_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MSSubClass</th>\n",
-       "      <th>MSZoning</th>\n",
-       "      <th>LotFrontage</th>\n",
-       "      <th>LotArea</th>\n",
-       "      <th>Street</th>\n",
-       "      <th>Alley</th>\n",
-       "      <th>LotShape</th>\n",
-       "      <th>LandContour</th>\n",
-       "      <th>Utilities</th>\n",
-       "      <th>LotConfig</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PoolArea</th>\n",
-       "      <th>PoolQC</th>\n",
-       "      <th>Fence</th>\n",
-       "      <th>MiscFeature</th>\n",
-       "      <th>MiscVal</th>\n",
-       "      <th>MoSold</th>\n",
-       "      <th>YrSold</th>\n",
-       "      <th>SaleType</th>\n",
-       "      <th>SaleCondition</th>\n",
-       "      <th>SalePrice</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>8450</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>Inside</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>208500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>FR2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>181500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>11250</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>Inside</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>223500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>70</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>9550</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>Corner</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Abnorml</td>\n",
-       "      <td>140000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>14260</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>FR2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>250000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 80 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape  \\\n",
-       "Id                                                                    \n",
-       "1           60       RL         65.0     8450   Pave   NaN      Reg   \n",
-       "2           20       RL         80.0     9600   Pave   NaN      Reg   \n",
-       "3           60       RL         68.0    11250   Pave   NaN      IR1   \n",
-       "4           70       RL         60.0     9550   Pave   NaN      IR1   \n",
-       "5           60       RL         84.0    14260   Pave   NaN      IR1   \n",
-       "\n",
-       "   LandContour Utilities LotConfig    ...     PoolArea PoolQC Fence  \\\n",
-       "Id                                    ...                             \n",
-       "1          Lvl    AllPub    Inside    ...            0    NaN   NaN   \n",
-       "2          Lvl    AllPub       FR2    ...            0    NaN   NaN   \n",
-       "3          Lvl    AllPub    Inside    ...            0    NaN   NaN   \n",
-       "4          Lvl    AllPub    Corner    ...            0    NaN   NaN   \n",
-       "5          Lvl    AllPub       FR2    ...            0    NaN   NaN   \n",
-       "\n",
-       "   MiscFeature MiscVal MoSold  YrSold  SaleType  SaleCondition  SalePrice  \n",
-       "Id                                                                         \n",
-       "1          NaN       0      2    2008        WD         Normal     208500  \n",
-       "2          NaN       0      5    2007        WD         Normal     181500  \n",
-       "3          NaN       0      9    2008        WD         Normal     223500  \n",
-       "4          NaN       0      2    2006        WD        Abnorml     140000  \n",
-       "5          NaN       0     12    2008        WD         Normal     250000  \n",
-       "\n",
-       "[5 rows x 80 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_house.head()"
+    "y = df_house['SalePrice']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -268,16 +56,16 @@
     {
      "data": {
       "text/plain": [
-       "(1460, 80)"
+       "((1460, 80), (1459, 79), (2919, 79))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_house.shape"
+    "df_house.shape, df_house_test.shape, df_all.shape"
    ]
   },
   {
@@ -304,7 +92,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_all_dummy = pd.get_dummies(df_all, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X = df_all_dummy.iloc[:len(y), :]\n",
+    "X = X.fillna(X.mean().round())\n",
+    "\n",
+    "X_test = df_all_dummy.iloc[len(y):, :]\n",
+    "X_test = X_test.fillna(X.mean().round())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ridge Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "ridge_reg = Ridge()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -312,24 +145,165 @@
     {
      "data": {
       "text/plain": [
-       "count      1460.000000\n",
-       "mean     180921.195890\n",
-       "std       79442.502883\n",
-       "min       34900.000000\n",
-       "25%      129975.000000\n",
-       "50%      163000.000000\n",
-       "75%      214000.000000\n",
-       "max      755000.000000\n",
-       "Name: SalePrice, dtype: float64"
+       "Ridge(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=None,\n",
+       "   normalize=False, random_state=None, solver='auto', tol=0.001)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_house['SalePrice'].describe()"
+    "ridge_reg.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12127485227319612"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# error on training\n",
+    "np.sqrt(np.mean((np.log(ridge_reg.predict(X)) - np.log(y)) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Id = df_all.index.values[len(y):]\n",
+    "y_test = ridge_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "submission = pd.DataFrame(data={'Id':Id, 'SalePrice':y_test})\n",
+    "submission.to_csv('../data/submissions/submission1.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rf = RandomForestRegressor(n_estimators=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=200, n_jobs=1, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.059288301690707514"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# error on training\n",
+    "np.sqrt(np.mean((np.log(rf.predict(X)) - np.log(y)) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_test = rf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "submission = pd.DataFrame(data={'Id':Id, 'SalePrice':y_test})\n",
+    "submission.to_csv('../data/submissions/submission2.csv', index=False)"
    ]
   },
   {
@@ -340,6 +314,19 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "parameters = {'kernel':('linear', 'rbf'), 'C':[1, 10]}\n",
+    "clf = grid_search.GridSearchCV(rf, parameters)\n",
+    ">>> clf.fit(iris.data, iris.target)"
+   ]
   }
  ],
  "metadata": {
