--- a/Kaggle/House Prices/python/Exploration.ipynb
+++ b/Kaggle/House Prices/python/Exploration.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +251,7 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,13 +307,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grid Search"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.grid_search import GridSearchCV"
+   ]
   },
   {
    "cell_type": "code",
@@ -323,10 +332,345 @@
    },
    "outputs": [],
    "source": [
-    "parameters = {'kernel':('linear', 'rbf'), 'C':[1, 10]}\n",
-    "clf = grid_search.GridSearchCV(rf, parameters)\n",
-    ">>> clf.fit(iris.data, iris.target)"
+    "rf = RandomForestRegressor()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=None, error_score='raise',\n",
+       "       estimator=RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           n_estimators=200, n_jobs=1, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False),\n",
+       "       fit_params={}, iid=True, n_jobs=-1,\n",
+       "       param_grid={'max_depth': [5, 7, 10, 15], 'n_estimators': [1000], 'min_samples_split': [2], 'max_features': ['auto']},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameters = {'max_features':['auto'], 'n_estimators':[1000], \n",
+    "             'min_samples_split':[2], 'max_depth': [5, 7, 10, 15] }\n",
+    "clf = GridSearchCV(rf, parameters, n_jobs=-1)\n",
+    "clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 15,\n",
+       " 'max_features': 'auto',\n",
+       " 'min_samples_split': 2,\n",
+       " 'n_estimators': 1000}"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rf.max_depth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "y_test = clf.predict(X_test)\n",
+    "submission = pd.DataFrame(data={'Id':Id, 'SalePrice':y_test})\n",
+    "submission.to_csv('../data/submissions/submission4.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mod1 = pd.read_csv('../data/submissions/submission1.csv', index_col='Id')\n",
+    "mod2 = pd.read_csv('../data/submissions/submission2.csv', index_col='Id')\n",
+    "mod3 = pd.read_csv('../data/submissions/submission3.csv', index_col='Id')\n",
+    "mod4 = pd.read_csv('../data/submissions/submission4.csv', index_col='Id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_sub = pd.concat((mod1, mod2, mod3, mod4), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extremely Random Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import ExtraTreesRegressor, ExtraTreesClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "erf = ExtraTreesRegressor(n_estimators=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ExtraTreesRegressor(bootstrap=False, criterion='mse', max_depth=None,\n",
+       "          max_features='auto', max_leaf_nodes=None, min_samples_leaf=1,\n",
+       "          min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "          n_estimators=1000, n_jobs=1, oob_score=False, random_state=None,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "erf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# error on training\n",
+    "np.sqrt(np.mean((np.log(erf.predict(X)) - np.log(y)) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_test = erf.predict(X_test)\n",
+    "submission = pd.DataFrame(data={'Id':Id, 'SalePrice':y_test})\n",
+    "submission.to_csv('../data/submissions/submission4.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mod1 = pd.read_csv('../data/submissions/submission1.csv', index_col='Id')\n",
+    "mod2 = pd.read_csv('../data/submissions/submission2.csv', index_col='Id')\n",
+    "mod3 = pd.read_csv('../data/submissions/submission3.csv', index_col='Id')\n",
+    "mod4 = pd.read_csv('../data/submissions/submission4.csv', index_col='Id')\n",
+    "df_sub = pd.concat((mod1, mod2, mod3, mod4), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_sub_all = df_sub.mean(axis=1).reset_index()\n",
+    "df_sub_all.columns = ['Id', 'SalePrice']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_sub_all.to_csv('../data/submissions/submission5.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gradient Boosted Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gbr = GradientBoostingRegressor(max_depth=2, n_estimators=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingRegressor(alpha=0.9, init=None, learning_rate=0.1, loss='ls',\n",
+       "             max_depth=2, max_features=None, max_leaf_nodes=None,\n",
+       "             min_samples_leaf=1, min_samples_split=2,\n",
+       "             min_weight_fraction_leaf=0.0, n_estimators=500,\n",
+       "             presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
+       "             warm_start=False)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gbr.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.080007139065524438"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# error on training\n",
+    "np.sqrt(np.mean((np.log(gbr.predict(X)) - np.log(y)) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_test = gbr.predict(X_test)\n",
+    "submission = pd.DataFrame(data={'Id':Id, 'SalePrice':y_test})\n",
+    "submission.to_csv('../data/submissions/submission4.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
