--- a/NBA Full Game Animation.ipynb
+++ b/NBA Full Game Animation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,6 +45,7 @@
     "import base64\n",
     "from IPython.display import HTML\n",
     "\n",
+    "file_name = 'temp_bball.mp4'\n",
     "video = io.open(file_name, 'r+b').read()\n",
     "encoded = base64.b64encode(video)\n",
     "HTML(data='''<video alt=\"test\" controls>\n",
@@ -2898,9 +2899,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2912,7 +2913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
